--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.4.0",
     "superagent": "^5.2.2"
   },
