--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "react": "^16.13.0",
     "react-burger-menu": "^2.6.13",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
     "react-scripts": "3.4.0",
